[DomInteractive] Mark Dom interactive to media document and image document

According to the spec (https://html.spec.whatwg.org/multipage/browsing-the-web.html#read-media),
"Then, the user agent must act as if it had stopped parsing", so we mark
DOM-interactive to Media Document when finishes parsing.

Bug: 845385
Change-Id: I825409e9cf4c8d11f1f9233844492cc3a0bebe9a
Reviewed-on: https://chromium-review.googlesource.com/1239516
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Liquan (Max) Gǔ <maxlg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594494}