third_party/blink/renderer/core/dom/raw_data_document_parser.h
@@ -38,8 +38,10 @@ class RawDataDocumentParser : public DocumentParser {
       : DocumentParser(document) {}
 
   void Finish() override {
-    if (!IsStopped())
+    if (!IsStopped()) {
+      GetDocument()->SetReadyState(Document::kInteractive);
       GetDocument()->FinishedParsing();
+    }
   }
 
  private:
