third_party/blink/renderer/core/html/image_document.cc
@@ -178,8 +178,10 @@ void ImageDocumentParser::Finish() {
     GetDocument()->ImageLoaded();
   }
 
-  if (!IsDetached())
+  if (!IsDetached()) {
+    GetDocument()->SetReadyState(Document::kInteractive);
     GetDocument()->FinishedParsing();
+  }
 }
 
 // --------
